# demo-radiation

./: .gitmodules  CMakeLists.txt  README.md  aerosol.F90  aerosol_modal.F90  model.F90  radiation.F90  wavelength_grid.F90
src/: aerosol.F90  aerosol_modal.F90  demo_rad_data.F90  model.F90  model_data.F90  musica_aerosol.F90  musica_aerosol_factory.F90  musica_aerosol_modal.F90  musica_aerosol_model.F90  musica_aerosol_sectional.F90  musica_radiation.F90  musica_schemes.txt  radiation.F90  toy_suite.xml  wavelength_grid.F90
